Dev | Display all examples by default

--- a/projects/demo/src/app/pages/demo/demo.component.scss
+++ b/projects/demo/src/app/pages/demo/demo.component.scss
@@ -1,9 +1,9 @@
 .viewport-iframe-wrapper {
     box-sizing: border-box;
     padding: 56px 0px;
-    position: relative;
-    height: 100%;
-    width: 100%;
+    // position: relative;
+    // height: 100%;
+    // width: 100%;
 }
 .viewport-iframe-container {
     padding-top: 20px;
