--- a/src/assets/documents/components/checkbox.html
+++ b/src/assets/documents/components/checkbox.html
@@ -13,7 +13,8 @@
   </div>
 
   <div class="doc-desc-1">
-    Checkboxes allow the user to select one or more items from a set. Checkboxes can be used to turn an option on or off.
+    Checkboxes allow the user to select one or more items from a set.
+    Checkboxes can be used to turn an option on or off.
   </div>
 
 
@@ -22,7 +23,7 @@
   <div class="doc-title-2">
     Examples
 
-    <span class="docs-more-example" doc-viewer-extend="exampleWrapper"></span>
+    <span class="docs-more-example"></span>
 
     <span class="docs-markdown-h3" id="examples">
       <span header-link="examples"></span>Examples</span>
@@ -34,37 +35,40 @@
   </div>
 
   <div class="doc-desc-2">
-    Checkboxes are for making selections from a list. They let users select more than one item and allow for easy selection or
+    Checkboxes are for making selections from a list. They let users select
+    more than one item and allow for easy selection or
     deselection of all items with a parent checkbox.
   </div>
   <div class="doc-example-container">
     <div app-docs-example="checkbox-basic"></div>
   </div>
 
-  <div id="exampleWrapper">
 
-    <div class="doc-title-4 mb-8">
-      Indeterminate Checkbox
-    </div>
-    <div class="doc-desc-2">
-      When not all child checkboxes are checked, the parent checkbox becomes an indeterminate checkbox.
-    </div>
-    <div class="doc-example-container">
-      <div app-docs-example="checkbox-indetermine"></div>
-    </div>
 
-    <div class="doc-title-4 mb-8">
-      Disabled Checkbox
-    </div>
-    <div class="doc-desc-2">
-      When checkbox is disabled, actions are unusable and un-clickable, it only serves the purpose of a visual representation of
-      the data.
-    </div>
-    <div class="doc-example-container">
-      <div app-docs-example="checkbox-disable"></div>
-    </div>
-
+  <div class="doc-title-4 mb-8">
+    Indeterminate Checkbox
   </div>
+  <div class="doc-desc-2">
+    When not all child checkboxes are checked, the parent checkbox becomes an
+    indeterminate checkbox.
+  </div>
+  <div class="doc-example-container">
+    <div app-docs-example="checkbox-indetermine"></div>
+  </div>
+
+  <div class="doc-title-4 mb-8">
+    Disabled Checkbox
+  </div>
+  <div class="doc-desc-2">
+    When checkbox is disabled, actions are unusable and un-clickable, it only
+    serves the purpose of a visual representation of
+    the data.
+  </div>
+  <div class="doc-example-container">
+    <div app-docs-example="checkbox-disable"></div>
+  </div>
+
+
 
   <div class="doc-divider">
   </div>
@@ -183,12 +187,17 @@
   <div class="doc-title-2">
     Component Location for Designers
     <span class="docs-markdown-h3" id="component_location_for_designers">
-      <span header-link="component_location_for_designers"></span>Component Location for Designers</span>
-  </div><a class="doc-download-link" href="http://vizient-toolkit.interactivelabs.com/toolkit_material_library.sketch">Download Sektch File</a>
+      <span header-link="component_location_for_designers"></span>Component
+      Location for Designers</span>
+  </div><a class="doc-download-link" href="http://vizient-toolkit.interactivelabs.com/toolkit_material_library.sketch">Download
+    Sektch File</a>
   <div class="doc-desc-2">
-    For designers, to add this component to your design, follow this path within the Sketch App UI:
+    For designers, to add this component to your design, follow this path
+    within the Sketch App UI:
   </div>
   <div sketch-link=""></div>
+
+
 
 
 
