--- a/src/assets/documents/components/header.html
+++ b/src/assets/documents/components/header.html
@@ -12,32 +12,35 @@
     Header
   </div>
   <div class="doc-desc-1">
-    Header appears on top all other surfaces in an app, displaying information and actions globally or relating to the current
+    Header appears on top all other surfaces in an app, displaying information
+    and actions globally or relating to the current
     screen. </div>
 
   <div class="doc-divider"></div>
   <div class="doc-title-2">
     Examples
-    <span class="docs-more-example" doc-viewer-extend="exampleWrapper"></span>
+    <span class="docs-more-example"></span>
     <span class="docs-markdown-h3" id="examples">
       <span header-link="examples"></span>Examples</span>
   </div>
 
   <div class="doc-desc-2">
-    Header are a special kind of toolbar that&#x2019;s used for branding, navigation, search, and actions.
+    Header are a special kind of toolbar that&#x2019;s used for branding,
+    navigation, search, and actions.
   </div>
   <div class="doc-example-container">
     <div app-docs-example="header-basic"></div>
   </div>
 
-  <div id="exampleWrapper">
-    <div class="doc-desc-2">
-      Application switcher in header is used for switching between applications within a product.
-    </div>
-    <div class="doc-example-container">
-      <div app-docs-example="header-application"></div>
-    </div>
+
+  <div class="doc-desc-2">
+    Application switcher in header is used for switching between applications
+    within a product.
   </div>
+  <div class="doc-example-container">
+    <div app-docs-example="header-application"></div>
+  </div>
+
 
   <div class="doc-divider">
   </div>
@@ -98,19 +101,22 @@
       </tr>
       <tr>
         <td>rightBtnClick</td>
-        <td>The callback function that is triggered when right button is pressed.</td>
+        <td>The callback function that is triggered when right button is
+          pressed.</td>
         <td>function(e)</td>
         <td></td>
       </tr>
       <tr>
         <td>hamburgerClick</td>
-        <td>The callback function that is triggered when hamburger button is pressed.</td>
+        <td>The callback function that is triggered when hamburger button is
+          pressed.</td>
         <td>function(e)</td>
         <td></td>
       </tr>
       <tr>
         <td>moreClick</td>
-        <td>The callback function that is triggered when more button is pressed.</td>
+        <td>The callback function that is triggered when more button is
+          pressed.</td>
         <td>function(e)</td>
         <td></td>
       </tr>
@@ -126,9 +132,11 @@
   <div class="doc-desc-2">
     Header should:
     <ul class="doc-list">
-      <li>Persistent: Header appear at the top and bottom of each screen in an app, and can disappear upon scroll.</li>
+      <li>Persistent: Header appear at the top and bottom of each screen in an
+        app, and can disappear upon scroll.</li>
       <li>Guiding: Header provide a reliable way to guide users through an app.</li>
-      <li>Consistent: Header have a consistent position and content to increase familiarity.</li>
+      <li>Consistent: Header have a consistent position and content to increase
+        familiarity.</li>
       <li>Immediate: Header can be accessed from any scroll position.</li>
     </ul>
   </div>
@@ -144,8 +152,10 @@
       <span header-link="content_guidelines"></span>Content Guidelines</span>
   </div>
   <div class="doc-desc-2">
-    If title text is long, use a prominent app bar and wrap the title to two lines. Don&#x2019;t truncate text, hiding the full title
-    may cause misunderstanding. Don&#x2019;t shrink text to fit on a single line.
+    If title text is long, use a prominent app bar and wrap the title to two
+    lines. Don&#x2019;t truncate text, hiding the full title
+    may cause misunderstanding. Don&#x2019;t shrink text to fit on a single
+    line.
   </div>
   <div class="docs-guideline-group">
     <div class="docs-usage-do docs-usage-w100 docs-usage-center" style="height:160px">
@@ -170,12 +180,17 @@
   <div class="doc-title-2">
     Component Location for Designers
     <span class="docs-markdown-h3" id="component_location_for_designers">
-      <span header-link="component_location_for_designers"></span>Component Location for Designers</span>
-  </div><a class="doc-download-link" href="http://vizient-toolkit.interactivelabs.com/toolkit_material_library.sketch">Download Sektch File</a>
+      <span header-link="component_location_for_designers"></span>Component
+      Location for Designers</span>
+  </div><a class="doc-download-link" href="http://vizient-toolkit.interactivelabs.com/toolkit_material_library.sketch">Download
+    Sektch File</a>
   <div class="doc-desc-2">
-    For designers, to add this component to your design, follow this path within the Sketch App UI:
+    For designers, to add this component to your design, follow this path
+    within the Sketch App UI:
   </div>
   <div sketch-link=""></div>
+
+
 
 
 
