--- a/src/assets/documents/components/list.html
+++ b/src/assets/documents/components/list.html
@@ -12,14 +12,15 @@
     List
   </div>
   <div class="doc-desc-1">
-    Lists are a continuous group of text or images. They are composed of items containing primary and supplemental actions, which
+    Lists are a continuous group of text or images. They are composed of items
+    containing primary and supplemental actions, which
     are represented by icons and text. </div>
 
   <div class="doc-divider">
   </div>
   <div class="doc-title-2 mb-24">
     Examples
-    <span class="docs-more-example" doc-viewer-extend="exampleWrapper"></span>
+    <span class="docs-more-example"></span>
     <span class="docs-markdown-h3" id="examples">
       <span header-link="examples"></span>Examples</span>
   </div>
@@ -28,20 +29,21 @@
     Basic List without Divider
   </div>
   <div class="doc-desc-2 mb-16">
-    Single-line list items contain a maximum of one line of text without divider.
+    Single-line list items contain a maximum of one line of text without
+    divider.
   </div>
   <div class="doc-example-container">
     <div app-docs-example="list-nodivider"></div>
   </div>
 
-  <div id="exampleWrapper">
-    <div class="doc-title-4 mb-16">
-      Basic List with Divider
-    </div>
-    <div class="doc-example-container">
-      <div app-docs-example="list-basic"></div>
-    </div>
+
+  <div class="doc-title-4 mb-16">
+    Basic List with Divider
   </div>
+  <div class="doc-example-container">
+    <div app-docs-example="list-basic"></div>
+  </div>
+
 
   <div class="doc-divider"></div>
   <div class="doc-title-2">
@@ -79,15 +81,19 @@
   </div>
 
   <div class="doc-desc-2">
-    Lists are a continuous group of text. They are composed of items containing primary and supplemental actions, which are represented
+    Lists are a continuous group of text. They are composed of items containing
+    primary and supplemental actions, which are represented
     by icons and text.
     <ul class="doc-list">
-      <li>Logical: Lists should be sorted in logical ways that make content easy to scan, such as alphabetical, numerical, chronological,
+      <li>Logical: Lists should be sorted in logical ways that make content
+        easy to scan, such as alphabetical, numerical, chronological,
         or by user preference.</li>
-      <li>Actionable: Lists present content in a way that makes it easy to identify a specific item in a collection and act on
+      <li>Actionable: Lists present content in a way that makes it easy to
+        identify a specific item in a collection and act on
         it.
       </li>
-      <li>Consistent: Lists should present icons, text, and actions in a consistent format.</li>
+      <li>Consistent: Lists should present icons, text, and actions in a
+        consistent format.</li>
     </ul>
   </div>
 
@@ -128,13 +134,18 @@
   <div class="doc-title-2">
     Component Location for Designers
     <span class="docs-markdown-h3" id="component_location_for_designers">
-      <span header-link="component_location_for_designers"></span>Component Location for Designers</span>
+      <span header-link="component_location_for_designers"></span>Component
+      Location for Designers</span>
   </div>
-  <a class="doc-download-link" href="http://vizient-toolkit.interactivelabs.com/toolkit_material_library.sketch">Download Sektch File</a>
+  <a class="doc-download-link" href="http://vizient-toolkit.interactivelabs.com/toolkit_material_library.sketch">Download
+    Sektch File</a>
   <div class="doc-desc-2">
-    For designers, to add this component to your design, follow this path within the Sketch App UI:
+    For designers, to add this component to your design, follow this path
+    within the Sketch App UI:
   </div>
   <div sketch-link=""></div>
+
+
 
 
 
