--- a/src/assets/documents/components/menu.html
+++ b/src/assets/documents/components/menu.html
@@ -13,18 +13,21 @@
   </div>
   <div class="doc-desc-1">
     <p>Menus display a list of choices on a transient sheet of material.</p>
-    <p>Menus appear upon interaction with a button, action, or other control. They display a list of choices, with one choice
+    <p>Menus appear upon interaction with a button, action, or other control.
+      They display a list of choices, with one choice
       per line.</p>
-    <p>Menu items may be disabled if not applicable to a certain context. Contextual menus dynamically change their available
+    <p>Menu items may be disabled if not applicable to a certain context.
+      Contextual menus dynamically change their available
       menu items based on the current state of the app.</p>
-    <p>Menus should not be used as a primary method for navigation within an app.</p>
+    <p>Menus should not be used as a primary method for navigation within an
+      app.</p>
   </div>
 
   <div class="doc-divider">
   </div>
   <div class="doc-title-2 mb-24">
     Examples
-    <span class="docs-more-example" doc-viewer-extend="exampleWrapper"></span>
+    <span class="docs-more-example"></span>
     <span class="docs-markdown-h3" id="examples">
       <span header-link="examples"></span>Examples</span>
   </div>
@@ -37,22 +40,22 @@
     <div app-docs-example="menu-basic"></div>
   </div>
 
-  <div class="" id="exampleWrapper">
 
-    <div class="doc-title-4 mb-8">
-      Menu with Icons
-    </div>
-    <div class="doc-example-container">
-      <div app-docs-example="menu-icon"></div>
-    </div>
 
-    <div class="doc-title-4 mb-8">
-      Nested Menu
-    </div>
-    <div class="doc-example-container" style="margin-top:16px">
-      <div app-docs-example="menu-nested"></div>
-    </div>
+  <div class="doc-title-4 mb-8">
+    Menu with Icons
   </div>
+  <div class="doc-example-container">
+    <div app-docs-example="menu-icon"></div>
+  </div>
+
+  <div class="doc-title-4 mb-8">
+    Nested Menu
+  </div>
+  <div class="doc-example-container" style="margin-top:16px">
+    <div app-docs-example="menu-nested"></div>
+  </div>
+
 
   <div class="doc-divider">
   </div>
@@ -95,8 +98,10 @@
       </tr>
       <tr>
         <td>panelClass</td>
-        <td>This method takes classes set on the host mat-menu element and applies them on the menu template that displays in
-          the overlay container. Otherwise, it&apos;s difficult to style the containing menu from outside the component.</td>
+        <td>This method takes classes set on the host mat-menu element and
+          applies them on the menu template that displays in
+          the overlay container. Otherwise, it&apos;s difficult to style the
+          containing menu from outside the component.</td>
         <td>string</td>
         <td></td>
       </tr>
@@ -140,7 +145,8 @@
   </div>
 
   <div class="doc-desc-2">
-    A menu displays a list of choices on a temporary surface. They appear when users interact with a button, action, or other
+    A menu displays a list of choices on a temporary surface. They appear when
+    users interact with a button, action, or other
     control.
     <ul class="doc-list">
       <li>Nimble: Menus should be easy to open, close, and interact with.</li>
@@ -161,7 +167,8 @@
   </div>
 
   <div class="doc-desc-2">
-    Dropdown menus display a list of options, triggered by an icon, button, or action. Be clearly stated which item is selected
+    Dropdown menus display a list of options, triggered by an icon, button, or
+    action. Be clearly stated which item is selected
     and which item is available to be selected.
   </div>
 
@@ -197,13 +204,18 @@
   <div class="doc-title-2">
     Component Location for Designers
     <span class="docs-markdown-h3" id="component_location_for_designers">
-      <span header-link="component_location_for_designers"></span>Component Location for Designers</span>
+      <span header-link="component_location_for_designers"></span>Component
+      Location for Designers</span>
   </div>
-  <a class="doc-download-link" href="http://vizient-toolkit.interactivelabs.com/toolkit_material_library.sketch">Download Sektch File</a>
+  <a class="doc-download-link" href="http://vizient-toolkit.interactivelabs.com/toolkit_material_library.sketch">Download
+    Sektch File</a>
   <div class="doc-desc-2">
-    For designers, to add this component to your design, follow this path within the Sketch App UI:
+    For designers, to add this component to your design, follow this path
+    within the Sketch App UI:
   </div>
   <div sketch-link=""></div>
+
+
 
 
 
