--- a/src/assets/documents/components/radio.html
+++ b/src/assets/documents/components/radio.html
@@ -18,7 +18,7 @@
   </div>
   <div class="doc-title-2">
     Examples
-    <span class="docs-more-example" doc-viewer-extend="exampleWrapper"></span>
+    <span class="docs-more-example"></span>
     <span class="docs-markdown-h3" id="examples">
       <span header-link="examples"></span>Examples</span>
   </div>
@@ -31,16 +31,17 @@
     <div app-docs-example="radio-button-basic"></div>
   </div>
 
-  <div id="exampleWrapper">
 
-    <div class="doc-title-4 mb-8">Disabled Radio Button</div>
-    <div class="doc-desc-2">
-      When radio button is disabled, actions are unusable and un-clickable, it only serves the purpose of a visual representation
-      of the data. </div>
-    <div class="doc-example-container">
-      <div app-docs-example="radio-button-disable"></div>
-    </div>
+
+  <div class="doc-title-4 mb-8">Disabled Radio Button</div>
+  <div class="doc-desc-2">
+    When radio button is disabled, actions are unusable and un-clickable, it
+    only serves the purpose of a visual representation
+    of the data. </div>
+  <div class="doc-example-container">
+    <div app-docs-example="radio-button-disable"></div>
   </div>
+
 
 
   <div class="doc-divider">
@@ -141,13 +142,18 @@
   <div class="doc-title-2">
     Component Location for Designers
     <span class="docs-markdown-h3" id="component_location_for_designers">
-      <span header-link="component_location_for_designers"></span>Component Location for Designers</span>
+      <span header-link="component_location_for_designers"></span>Component
+      Location for Designers</span>
   </div>
-  <a class="doc-download-link" href="http://vizient-toolkit.interactivelabs.com/toolkit_material_library.sketch">Download Sektch File</a>
+  <a class="doc-download-link" href="http://vizient-toolkit.interactivelabs.com/toolkit_material_library.sketch">Download
+    Sektch File</a>
   <div class="doc-desc-2">
-    For designers, to add this component to your design, follow this path within the Sketch App UI:
+    For designers, to add this component to your design, follow this path
+    within the Sketch App UI:
   </div>
   <div sketch-link=""></div>
+
+
 
 
 
