--- a/src/assets/documents/components/select.html
+++ b/src/assets/documents/components/select.html
@@ -12,58 +12,61 @@
     Select
   </div>
   <div class="doc-desc-1">
-    Select allows users to select from a single-option menu. Select is a form control for selecting a value from a set of options.
+    Select allows users to select from a single-option menu. Select is a form
+    control for selecting a value from a set of options.
   </div>
 
   <div class="doc-divider">
   </div>
   <div class="doc-title-2">
     Examples
-    <span class="docs-more-example" doc-viewer-extend="exampleWrapper"></span>
+    <span class="docs-more-example"></span>
     <span class="docs-markdown-h3" id="examples">
       <span header-link="examples"></span>Examples</span>
   </div>
 
   <div class="doc-title-4 mb-8">Basic Select</div>
   <div class="doc-desc-2">
-    In simple select, option menus positioned under their emitting elements such that the currently selected menu item appears
+    In simple select, option menus positioned under their emitting elements
+    such that the currently selected menu item appears
     under of the emitting element.
   </div>
   <div class="doc-example-container">
     <div app-docs-example="select-basic"></div>
   </div>
 
-  <div id="exampleWrapper">
 
-    <div class="doc-title-4 mb-16">Select in Error State</div>
-    <div class="doc-example-container">
-      <div app-docs-example="select-error-state"></div>
-    </div>
 
-    <div class="doc-title-4 mb-8">Disabled Select</div>
-    <div class="doc-desc-2">A disabled select is unusable and un-clickable and are rendered in gray by default in browsers. </div>
-    <div class="doc-example-container">
-      <div app-docs-example="select-disable"></div>
-    </div>
-
-    <div class="doc-title-4 mb-16">Select with Option Groups</div>
-    <div class="doc-example-container">
-      <div app-docs-example="select-group-option"></div>
-    </div>
-
-    <div class="doc-title-4 mb-16">Select with Multiple Selection</div>
-    <div class="doc-example-container">
-      <div app-docs-example="select-multiple-selection"></div>
-    </div>
-
-    <div class="doc-title-4 mb-16">Select with Custom Trigger Text</div>
-    <div class="doc-example-container">
-      <div app-docs-example="select-trigger-text"></div>
-    </div>
-
-    
-
+  <div class="doc-title-4 mb-16">Select in Error State</div>
+  <div class="doc-example-container">
+    <div app-docs-example="select-error-state"></div>
   </div>
+
+  <div class="doc-title-4 mb-8">Disabled Select</div>
+  <div class="doc-desc-2">A disabled select is unusable and un-clickable and
+    are rendered in gray by default in browsers. </div>
+  <div class="doc-example-container">
+    <div app-docs-example="select-disable"></div>
+  </div>
+
+  <div class="doc-title-4 mb-16">Select with Option Groups</div>
+  <div class="doc-example-container">
+    <div app-docs-example="select-group-option"></div>
+  </div>
+
+  <div class="doc-title-4 mb-16">Select with Multiple Selection</div>
+  <div class="doc-example-container">
+    <div app-docs-example="select-multiple-selection"></div>
+  </div>
+
+  <div class="doc-title-4 mb-16">Select with Custom Trigger Text</div>
+  <div class="doc-example-container">
+    <div app-docs-example="select-trigger-text"></div>
+  </div>
+
+
+
+
 
   <div class="doc-divider">
   </div>
@@ -110,7 +113,8 @@
   <div class="doc-desc-2">
     Use radio button to:
     <ul class="doc-list">
-      <li>Scannable: It should be visible at a glance if a selection has been selected, and selected items should be more visually
+      <li>Scannable: It should be visible at a glance if a selection has been
+        selected, and selected items should be more visually
         prominent than unselected items.</li>
       <li>Contextual: Select content should be suited to user needs.</li>
       <li>Nimble: Selects should be easy to open, close, and interact with.</li>
@@ -129,7 +133,8 @@
   </div>
 
   <div class="doc-desc-2">
-    Select menu should be short, clear, and fully visible. It shouldn&#x2019;t be truncated.
+    Select menu should be short, clear, and fully visible. It shouldn&#x2019;t
+    be truncated.
   </div>
 
   <div class="docs-guideline-group">
@@ -160,13 +165,18 @@
   <div class="doc-title-2">
     Component Location for Designers
     <span class="docs-markdown-h3" id="component_location_for_designers">
-      <span header-link="component_location_for_designers"></span>Component Location for Designers</span>
+      <span header-link="component_location_for_designers"></span>Component
+      Location for Designers</span>
   </div>
-  <a class="doc-download-link" href="http://vizient-toolkit.interactivelabs.com/toolkit_material_library.sketch">Download Sektch File</a>
+  <a class="doc-download-link" href="http://vizient-toolkit.interactivelabs.com/toolkit_material_library.sketch">Download
+    Sektch File</a>
   <div class="doc-desc-2">
-    For designers, to add this component to your design, follow this path within the Sketch App UI:
+    For designers, to add this component to your design, follow this path
+    within the Sketch App UI:
   </div>
   <div sketch-link=""></div>
+
+
 
 
 
