--- a/src/assets/documents/components/slidetoggle.html
+++ b/src/assets/documents/components/slidetoggle.html
@@ -11,30 +11,32 @@
   <div class="doc-title-1">
     Slide Toggle </div>
   <div class="doc-desc-1">
-    Slider Toggles are used for binary actions. They are commonly used for &#x201C;On/Off&#x201D; situations. </div>
+    Slider Toggles are used for binary actions. They are commonly used for
+    &#x201C;On/Off&#x201D; situations. </div>
 
   <div class="doc-divider">
   </div>
   <div class="doc-title-2">
     Examples
-    <span class="docs-more-example" doc-viewer-extend="exampleWrapper"></span>
+    <span class="docs-more-example"></span>
     <span class="docs-markdown-h3" id="examples">
       <span header-link="examples"></span>Examples</span>
   </div>
 
   <div class="doc-desc-2">
-    Default slide toggle is an on/off control that can be toggled via clicking or dragging. </div>
+    Default slide toggle is an on/off control that can be toggled via clicking
+    or dragging. </div>
   <div class="doc-example-container">
     <div app-docs-example="slide-toggle-basic"></div>
   </div>
 
-  <div id="exampleWrapper">
-    <div class="doc-desc-2">
-      Slide toggle that cannot be selected can a disabled state. </div>
-    <div class="doc-example-container">
-      <div app-docs-example="slide-toggle-disable"></div>
-    </div>
+
+  <div class="doc-desc-2">
+    Slide toggle that cannot be selected can a disabled state. </div>
+  <div class="doc-example-container">
+    <div app-docs-example="slide-toggle-disable"></div>
   </div>
+
 
   <div class="doc-divider">
   </div>
@@ -82,7 +84,8 @@
     Slider toggle should:
     <ul class="doc-list">
       <li>Control over an option or feature that can be turned on or off.</li>
-      <li>Be made clear from the corresponding inline label for the option that it controls.</li>
+      <li>Be made clear from the corresponding inline label for the option that
+        it controls.</li>
     </ul>
   </div>
 
@@ -131,12 +134,17 @@
   <div class="doc-title-2">
     Component Location for Designers
     <span class="docs-markdown-h3" id="component_location_for_designers">
-      <span header-link="component_location_for_designers"></span>Component Location for Designers</span>
-  </div><a class="doc-download-link" href="http://vizient-toolkit.interactivelabs.com/toolkit_material_library.sketch">Download Sektch File</a>
+      <span header-link="component_location_for_designers"></span>Component
+      Location for Designers</span>
+  </div><a class="doc-download-link" href="http://vizient-toolkit.interactivelabs.com/toolkit_material_library.sketch">Download
+    Sektch File</a>
   <div class="doc-desc-2">
-    For designers, to add this component to your design, follow this path within the Sketch App UI:
+    For designers, to add this component to your design, follow this path
+    within the Sketch App UI:
   </div>
   <div sketch-link=""></div>
+
+
 
 
 
