--- a/src/assets/documents/components/tree.html
+++ b/src/assets/documents/components/tree.html
@@ -12,13 +12,14 @@
     Tree
   </div>
   <div class="doc-desc-1">
-    Trees allow navigation between groups of content that are related and at the different level of hierarchy. </div>
+    Trees allow navigation between groups of content that are related and at
+    the different level of hierarchy. </div>
 
   <div class="doc-divider">
   </div>
   <div class="doc-title-2">
     Examples
-    <span class="docs-more-example" doc-viewer-extend="exampleWrapper"></span>
+    <span class="docs-more-example"></span>
     <span class="docs-markdown-h3" id="examples">
       <span header-link="examples"></span>Examples</span>
   </div>
@@ -30,37 +31,37 @@
     <div app-docs-example="tree-dynamic-data"></div>
   </div>
 
-  <div id="exampleWrapper">
 
-    <div class="doc-title-4 mb-8">
-      Tree with Flat Nodes
-    </div>
-    <div class="doc-example-container">
-      <div app-docs-example="tree-flat-nodes"></div>
-    </div>
 
-    <div class="doc-title-4 mb-8">
-      Tree with Checkboxes
-    </div>
-    <div class="doc-example-container">
-      <div app-docs-example="tree-checkbox-material"></div>
-    </div>
-
-    <div class="doc-title-4 mb-8">
-      Tree with Nested Nodes
-    </div>
-    <div class="doc-example-container">
-      <div app-docs-example="tree-nested-nodes"></div>
-    </div>
-
-    <div class="doc-title-4 mb-8">
-      Tree with Partially Loaded Data
-    </div>
-    <div class="doc-example-container">
-      <div app-docs-example="tree-partially-loaded"></div>
-    </div>
-
+  <div class="doc-title-4 mb-8">
+    Tree with Flat Nodes
   </div>
+  <div class="doc-example-container">
+    <div app-docs-example="tree-flat-nodes"></div>
+  </div>
+
+  <div class="doc-title-4 mb-8">
+    Tree with Checkboxes
+  </div>
+  <div class="doc-example-container">
+    <div app-docs-example="tree-checkbox-material"></div>
+  </div>
+
+  <div class="doc-title-4 mb-8">
+    Tree with Nested Nodes
+  </div>
+  <div class="doc-example-container">
+    <div app-docs-example="tree-nested-nodes"></div>
+  </div>
+
+  <div class="doc-title-4 mb-8">
+    Tree with Partially Loaded Data
+  </div>
+  <div class="doc-example-container">
+    <div app-docs-example="tree-partially-loaded"></div>
+  </div>
+
+
 
   <div class="doc-divider">
   </div>
@@ -100,14 +101,18 @@
   </div>
 
   <div class="doc-desc-2">
-    Trees are a continuous group of text or control components. Trees should be:
+    Trees are a continuous group of text or control components. Trees should
+    be:
     <ul class="doc-list">
       <li>
-        <span class="doc-list-bold">logical</span>: Trees should be sorted in logical ways that make content easy to scan, such as alphabetical, numerical,
+        <span class="doc-list-bold">logical</span>: Trees should be sorted in
+        logical ways that make content easy to scan, such as alphabetical,
+        numerical,
         chronological, or by user preference.
       </li>
       <li>
-        <span class="doc-list-bold">Actionable</span>: Trees present content in a way that makes it easy to identify a specific item in a collection
+        <span class="doc-list-bold">Actionable</span>: Trees present content in
+        a way that makes it easy to identify a specific item in a collection
         and act on it.
       </li>
     </ul>
@@ -158,13 +163,18 @@
   <div class="doc-title-2">
     Component Location for Designers
     <span class="docs-markdown-h3" id="component_location_for_designers">
-      <span header-link="component_location_for_designers"></span>Component Location for Designers</span>
+      <span header-link="component_location_for_designers"></span>Component
+      Location for Designers</span>
   </div>
-  <a class="doc-download-link" href="http://vizient-toolkit.interactivelabs.com/toolkit_material_library.sketch">Download Sektch File</a>
+  <a class="doc-download-link" href="http://vizient-toolkit.interactivelabs.com/toolkit_material_library.sketch">Download
+    Sektch File</a>
   <div class="doc-desc-2">
-    For designers, to add this component to your design, follow this path within the Sketch App UI:
+    For designers, to add this component to your design, follow this path
+    within the Sketch App UI:
   </div>
   <div sketch-link=""></div>
+
+
 
 
 
