--- a/src/assets/documents/components/badge.html
+++ b/src/assets/documents/components/badge.html
@@ -12,38 +12,40 @@
     Badge
   </div>
   <div class="doc-desc-1">
-    Badges are small status descriptors for UI elements. A badge consists of a small circle, typically containing a number or
+    Badges are small status descriptors for UI elements. A badge consists of a
+    small circle, typically containing a number or
     other short set of characters, that appears in proximity to another object.
   </div>
 
   <div class="doc-divider"></div>
   <div class="doc-title-2">
     Examples
-    <span class="docs-more-example" doc-viewer-extend="exampleWrapper"></span>
+    <span class="docs-more-example"></span>
     <span class="docs-markdown-h3" id="examples">
       <span header-link="examples"></span>Examples</span>
   </div>
 
   <div class="doc-desc-2">
-    Examples of badges paring with text, using primary and secondary colors. The badge is applied to its children.
+    Examples of badges paring with text, using primary and secondary colors.
+    The badge is applied to its children.
     <div class="doc-example-container">
       <div app-docs-example="badge-basic"></div>
     </div>
   </div>
-  <div id="exampleWrapper">
-    <div class="doc-desc-2">
-      Examples of badges paring with icon.
-      <div class="doc-example-container">
-        <div app-docs-example="badge-icon"></div>
-      </div>
-    </div>
-    <div class="doc-desc-2">
-      Example of badge tabs.
-      <div class="doc-example-container">
-        <div app-docs-example="badge-tabs"></div>
-      </div>
+
+  <div class="doc-desc-2">
+    Examples of badges paring with icon.
+    <div class="doc-example-container">
+      <div app-docs-example="badge-icon"></div>
     </div>
   </div>
+  <div class="doc-desc-2">
+    Example of badge tabs.
+    <div class="doc-example-container">
+      <div app-docs-example="badge-tabs"></div>
+    </div>
+  </div>
+
   <div class="doc-divider">
   </div>
   <div class="doc-title-2">
@@ -85,13 +87,16 @@
       </tr>
       <tr>
         <td>matBadgePosition</td>
-        <td>Position the badge should reside. Accepts any combination of &apos;above&apos;|&apos;below&apos; and &apos;before&apos;|&apos;after&apos;</td>
+        <td>Position the badge should reside. Accepts any combination of
+          &apos;above&apos;|&apos;below&apos; and
+          &apos;before&apos;|&apos;after&apos;</td>
         <td>string</td>
         <td>above after</td>
       </tr>
       <tr>
         <td>matBadgeSize</td>
-        <td>Size of the badge. Can be &apos;small&apos;, &apos;medium&apos;, or &apos;large&apos;.</td>
+        <td>Size of the badge. Can be &apos;small&apos;, &apos;medium&apos;, or
+          &apos;large&apos;.</td>
         <td>string</td>
         <td>medium</td>
       </tr>
@@ -108,7 +113,8 @@
     Badges should:
     <ul class="doc-list">
       <li>Use established and right colors appropriately in each case.</li>
-      <li>Be positioned in consistent locations in the interface. The badge should always be close to the element that it supports
+      <li>Be positioned in consistent locations in the interface. The badge
+        should always be close to the element that it supports
       </li>
     </ul>
   </div>
@@ -125,7 +131,8 @@
       <span header-link="content_guidelines"></span>Content Guidelines</span>
   </div>
   <div class="doc-desc-2">
-    Badge should not block the over elements it support. Bagde should always stay on the right of the main elements. </div>
+    Badge should not block the over elements it support. Bagde should always
+    stay on the right of the main elements. </div>
   <div class="docs-guideline-group">
     <div class="docs-usage-do docs-usage-w50 docs-usage-center" style="height:160px">
       <img src="assets/img/doc/badge-block-do.png" alt="">
@@ -171,13 +178,18 @@
   <div class="doc-title-2">
     Component Location for Designers
     <span class="docs-markdown-h3" id="component_location_for_designers">
-      <span header-link="component_location_for_designers"></span>Component Location for Designers</span>
+      <span header-link="component_location_for_designers"></span>Component
+      Location for Designers</span>
   </div>
-  <a class="doc-download-link" href="http://vizient-toolkit.interactivelabs.com/toolkit_material_library.sketch">Download Sektch File</a>
+  <a class="doc-download-link" href="http://vizient-toolkit.interactivelabs.com/toolkit_material_library.sketch">Download
+    Sektch File</a>
   <div class="doc-desc-2">
-    For designers, to add this component to your design, follow this path within the Sketch App UI:
+    For designers, to add this component to your design, follow this path
+    within the Sketch App UI:
   </div>
   <div sketch-link=""></div>
+
+
 
 
 
