--- a/src/assets/documents/components/button.html
+++ b/src/assets/documents/components/button.html
@@ -12,56 +12,58 @@
     Button
   </div>
   <div class="doc-desc-1">
-    Buttons make common actions immediately visible and easy to perform with one click or tap. They can be used for any type
+    Buttons make common actions immediately visible and easy to perform with
+    one click or tap. They can be used for any type
     of action, including navigation.
   </div>
   <div class="doc-divider"></div>
   <div class="doc-title-2">
     Examples
-    <span class="docs-more-example" doc-viewer-extend="exampleWrapper"></span>
+    <span class="docs-more-example"></span>
     <span class="docs-markdown-h3" id="examples">
       <span header-link="examples"></span>Examples</span>
   </div>
 
   <div class="doc-desc-2">
-    Used most in the interface. Only use another style if a button requires more or less visual weight.
+    Used most in the interface. Only use another style if a button requires
+    more or less visual weight.
   </div>
   <div class="doc-example-container">
     <div app-docs-example="button-basic"></div>
   </div>
 
-  <div id="exampleWrapper">
-    <div class="doc-desc-2">
-      Use against shaded or colorful backgrounds.
-    </div>
-    <div class="doc-example-container">
-      <div app-docs-example="button-stroked"></div>
-    </div>
-    <div class="doc-desc-2">
-      Used as second action beside primary button in a section or screen.
-    </div>
-    <div class="doc-example-container">
-      <div app-docs-example="button-text"></div>
-    </div>
-    <div class="doc-desc-2">
-      Can be used when an action need to be emphasized.
-    </div>
-    <div class="doc-example-container">
-      <div app-docs-example="button-icon-left"></div>
-    </div>
-    <div class="doc-desc-2">
-      Can be used when an action need to be emphasized.
-    </div>
-    <div class="doc-example-container">
-      <div app-docs-example="button-icon-right"></div>
-    </div>
-    <div class="doc-desc-2">
-      Use for actions that aren&#x2019;t currently available.
-    </div>
-    <div class="doc-example-container">
-      <div app-docs-example="button-disable"></div>
-    </div>
+
+  <div class="doc-desc-2">
+    Use against shaded or colorful backgrounds.
   </div>
+  <div class="doc-example-container">
+    <div app-docs-example="button-stroked"></div>
+  </div>
+  <div class="doc-desc-2">
+    Used as second action beside primary button in a section or screen.
+  </div>
+  <div class="doc-example-container">
+    <div app-docs-example="button-text"></div>
+  </div>
+  <div class="doc-desc-2">
+    Can be used when an action need to be emphasized.
+  </div>
+  <div class="doc-example-container">
+    <div app-docs-example="button-icon-left"></div>
+  </div>
+  <div class="doc-desc-2">
+    Can be used when an action need to be emphasized.
+  </div>
+  <div class="doc-example-container">
+    <div app-docs-example="button-icon-right"></div>
+  </div>
+  <div class="doc-desc-2">
+    Use for actions that aren&#x2019;t currently available.
+  </div>
+  <div class="doc-example-container">
+    <div app-docs-example="button-disable"></div>
+  </div>
+
 
   <div class="doc-divider">
   </div>
@@ -110,9 +112,11 @@
     <ul class="doc-list">
       <li>Be clearly and accurately labeled.</li>
       <li>Lead with strong, actionable verbs.</li>
-      <li>Use established button colors appropriately. For example, only use a red button for an action that&#x2019;s difficult or impossible
+      <li>Use established button colors appropriately. For example, only use a
+        red button for an action that&#x2019;s difficult or impossible
         to undo.</li>
-      <li>Prioritize the most important actions. Too many calls to action can cause confusion and make merchants unsure of what
+      <li>Prioritize the most important actions. Too many calls to action can
+        cause confusion and make merchants unsure of what
         to do next.</li>
       <li>Be positioned in consistent locations in the interface.</li>
     </ul>
@@ -129,7 +133,8 @@
       <span header-link="content_guidelines"></span>Content Guidelines</span>
   </div>
   <div class="doc-desc-2">
-    Buttons should be clear and predictable&#x2014;data analyst should be able to anticipate what will happen when they click a button.
+    Buttons should be clear and predictable&#x2014;data analyst should be able
+    to anticipate what will happen when they click a button.
     Never deceive them by mislabeling a button.
   </div>
   <div class="docs-guideline-group">
@@ -141,7 +146,8 @@
     </div>
   </div>
   <div class="doc-desc-2">
-    Don&#x2019;t wrap text. For maximum legibility, a text label should remain on a single line.
+    Don&#x2019;t wrap text. For maximum legibility, a text label should remain
+    on a single line.
   </div>
   <div class="docs-guideline-group">
     <div class="docs-usage-do docs-usage-w50 docs-usage-center" style="height:160px">
@@ -166,12 +172,17 @@
   <div class="doc-title-2">
     Component Location for Designers
     <span class="docs-markdown-h3" id="component_location_for_designers">
-      <span header-link="component_location_for_designers"></span>Component Location for Designers</span>
-  </div><a class="doc-download-link" href="http://vizient-toolkit.interactivelabs.com/toolkit_material_library.sketch">Download Sektch File</a>
+      <span header-link="component_location_for_designers"></span>Component
+      Location for Designers</span>
+  </div><a class="doc-download-link" href="http://vizient-toolkit.interactivelabs.com/toolkit_material_library.sketch">Download
+    Sektch File</a>
   <div class="doc-desc-2">
-    For designers, to add this component to your design, follow this path within the Sketch App UI:
+    For designers, to add this component to your design, follow this path
+    within the Sketch App UI:
   </div>
   <div sketch-link=""></div>
+
+
 
 
 
