--- a/src/assets/documents/components/chip.html
+++ b/src/assets/documents/components/chip.html
@@ -18,38 +18,40 @@
   <div class="doc-divider"></div>
   <div class="doc-title-2">
     Examples
-    <span class="docs-more-example" doc-viewer-extend="exampleWrapper"></span>
+    <span class="docs-more-example"></span>
     <span class="docs-markdown-h3" id="examples">
       <span header-link="examples"></span>Examples</span>
   </div>
 
   <div class="doc-desc-2">
-    Use to represent a single selection in sets that contain at least two options.
+    Use to represent a single selection in sets that contain at least two
+    options.
   </div>
   <div class="doc-example-container">
     <div app-docs-example="chip-basic"></div>
   </div>
 
-  <div id="exampleWrapper">
-    <div class="doc-desc-2 docs-mt24">
-      Use to represent information used in fields, such as an entity or different attributes.
-    </div>
-    <div class="doc-example-container">
-      <div app-docs-example="chip-close"></div>
-    </div>
-    <div class="doc-desc-2 docs-mt24">
-      Chip in alternative color.
-    </div>
-    <div class="doc-example-container">
-      <div app-docs-example="chip-primary"></div>
-    </div>
-    <div class="doc-desc-2 docs-mt24">
-      Use for chips that aren&#x2019;t currently available.
-    </div>
-    <div class="doc-example-container">
-      <div app-docs-example="chip-disable"></div>
-    </div>
+
+  <div class="doc-desc-2 docs-mt24">
+    Use to represent information used in fields, such as an entity or different
+    attributes.
   </div>
+  <div class="doc-example-container">
+    <div app-docs-example="chip-close"></div>
+  </div>
+  <div class="doc-desc-2 docs-mt24">
+    Chip in alternative color.
+  </div>
+  <div class="doc-example-container">
+    <div app-docs-example="chip-primary"></div>
+  </div>
+  <div class="doc-desc-2 docs-mt24">
+    Use for chips that aren&#x2019;t currently available.
+  </div>
+  <div class="doc-example-container">
+    <div app-docs-example="chip-disable"></div>
+  </div>
+
 
 
 
@@ -82,7 +84,8 @@
       </tr>
       <tr>
         <td>compareWith</td>
-        <td>A function to compare the option values with the selected values. The first argument is a value from an option. The
+        <td>A function to compare the option values with the selected values.
+          The first argument is a value from an option. The
           second is a value from the selection. A boolean should be returned.</td>
         <td>(o1: any, o2: any) =&gt; boolean</td>
         <td>Function</td>
@@ -101,14 +104,16 @@
       </tr>
       <tr>
         <td>selectable</td>
-        <td>Whether or not this chip list is selectable. When a chip list is not selectable, the selected states for all the
+        <td>Whether or not this chip list is selectable. When a chip list is
+          not selectable, the selected states for all the
           chips inside the chip list are always ignored.</td>
         <td> boolean</td>
         <td>false</td>
       </tr>
       <tr>
         <td>change</td>
-        <td>Event emitted when the selected chip list value has been changed by the user.</td>
+        <td>Event emitted when the selected chip list value has been changed by
+          the user.</td>
         <td> EventEmitter
           <matchiplistchange>
           </matchiplistchange>
@@ -117,7 +122,8 @@
       </tr>
       <tr>
         <td>autofilled</td>
-        <td>Whether the input is currently in an autofilled state. If property is not present on the control it is assumed to
+        <td>Whether the input is currently in an autofilled state. If property
+          is not present on the control it is assumed to
           be false.</td>
         <td> boolean</td>
         <td>false</td>
@@ -133,7 +139,8 @@
       </tr>
       <tr>
         <td>chipFocusChanges</td>
-        <td>Combined stream of all of the child chips&apos; focus change events.</td>
+        <td>Combined stream of all of the child chips&apos; focus change
+          events.</td>
         <td> Observable
           <matchipevent>
           </matchipevent>
@@ -142,7 +149,8 @@
       </tr>
       <tr>
         <td>chipRemoveChanges</td>
-        <td>Combined stream of all of the child chips&apos; remove change events.</td>
+        <td>Combined stream of all of the child chips&apos; remove change
+          events.</td>
         <td> Observable
           <matchipevent>
           </matchipevent>
@@ -151,7 +159,8 @@
       </tr>
       <tr>
         <td>chipSelectionChanges</td>
-        <td>Combined stream of all of the child chips&apos; selection change events.</td>
+        <td>Combined stream of all of the child chips&apos; selection change
+          events.</td>
         <td> Observable
           <matchipselectionchange>
           </matchipselectionchange>
@@ -175,7 +184,8 @@
       </tr>
       <tr>
         <td>focused</td>
-        <td>Whether any chips or the matChipInput inside of this chip-list has focus.</td>
+        <td>Whether any chips or the matChipInput inside of this chip-list has
+          focus.</td>
         <td> boolean</td>
         <td>false</td>
       </tr>
@@ -193,7 +203,8 @@
       </tr>
       <tr>
         <td>stateChanges</td>
-        <td>Stream that emits whenever the state of the control changes such that the parent&#xFFFD;MatFormField&#xFFFD;needs to run change
+        <td>Stream that emits whenever the state of the control changes such
+          that the parent&#xFFFD;MatFormField&#xFFFD;needs to run change
           detection.
         </td>
         <td> Observable\
@@ -212,11 +223,15 @@
   </div>
 
   <div class="doc-desc-2">
-    Chips allow users to enter information, make selections, filter content, or trigger actions:
+    Chips allow users to enter information, make selections, filter content, or
+    trigger actions:
     <ul class="doc-list">
-      <li>Compact: Chips are compact components that represent discrete information.</li>
-      <li>Relevant: Chips should have a clear and helpful relationship to the content or task they represent</li>
-      <li>Focused: Chips should make tasks easier to complete, or content easier to sort.</li>
+      <li>Compact: Chips are compact components that represent discrete
+        information.</li>
+      <li>Relevant: Chips should have a clear and helpful relationship to the
+        content or task they represent</li>
+      <li>Focused: Chips should make tasks easier to complete, or content
+        easier to sort.</li>
     </ul>
   </div>
 
@@ -242,15 +257,19 @@
     </div>
   </div>
   <div class="doc-desc-2">
-    Horizontal placement of choice chips. Choice chips can wrap to a new row. However, using two or more rows of choice chips
+    Horizontal placement of choice chips. Choice chips can wrap to a new row.
+    However, using two or more rows of choice chips
     can make each chip harder to scan.
   </div>
   <div class="docs-guideline-group">
     <div class="docs-usage-do docs-usage-w100 docs-usage-center" style="height:160px">
-      <img width="432" height="32" src="assets/img/doc/chip-horizatal-do.png" alt="">
+      <img width="432" height="32" src="assets/img/doc/chip-horizatal-do.png"
+        alt="">
     </div>
-    <div class="docs-usage-warn docs-usage-w100 docs-usage-center docs-mt24" style="height:160px">
-      <img width="256" height="76" src="assets/img/doc/chip-horizatal-dont.png" alt="">
+    <div class="docs-usage-warn docs-usage-w100 docs-usage-center docs-mt24"
+      style="height:160px">
+      <img width="256" height="76" src="assets/img/doc/chip-horizatal-dont.png"
+        alt="">
     </div>
   </div>
   <div class="doc-divider"></div>
@@ -264,18 +283,23 @@
   <div class="docs-usage-spec docs-usage-center" style="height:280px">
     <img src="assets/img/doc/chip-spec.png" alt="">
   </div>
-  <div sketch-link></div>
+  <div sketch-link=""></div>
 
   <div class="doc-divider"></div>
   <div class="doc-title-2">
     Component Location for Designers
     <span class="docs-markdown-h3" id="component_location_for_designers">
-      <span header-link="component_location_for_designers"></span>Component Location for Designers</span>
-  </div><a class="doc-download-link" href="http://vizient-toolkit.interactivelabs.com/toolkit_material_library.sketch">Download Sektch File</a>
+      <span header-link="component_location_for_designers"></span>Component
+      Location for Designers</span>
+  </div><a class="doc-download-link" href="http://vizient-toolkit.interactivelabs.com/toolkit_material_library.sketch">Download
+    Sektch File</a>
   <div class="doc-desc-2">
-    For designers, to add this component to your design, follow this path within the Sketch App UI:
+    For designers, to add this component to your design, follow this path
+    within the Sketch App UI:
   </div>
   <div sketch-link=""></div>
+
+
 
 
 
