--- a/src/assets/documents/components/expansionpanel.html
+++ b/src/assets/documents/components/expansionpanel.html
@@ -1,172 +1,160 @@
 <html>
-  <head></head>
 
-  <body>
-    <div class="doc-category-title">
-      Layout
-      <span class="docs-markdown-h3" id="contents">
-        <span header-link="contents"></span>Contents</span
-      >
-    </div>
-    <div class="doc-title-1">Expansion Panel</div>
-    <div class="doc-desc-1">
-      Expansion Panels contain creation flows and allow lightweight editing of
-      an element.
-    </div>
+<head></head>
 
-    <div class="doc-divider"></div>
-    <div class="doc-title-2">
-      Examples
-      <span class="docs-more-example" doc-viewer-extend="exampleWrapper"></span>
+<body>
+  <div class="doc-category-title">
+    Layout
+    <span class="docs-markdown-h3" id="contents">
+      <span header-link="contents"></span>Contents</span>
+  </div>
+  <div class="doc-title-1">Expansion Panel</div>
+  <div class="doc-desc-1">
+    Expansion Panels contain creation flows and allow lightweight editing of
+    an element.
+  </div>
 
-      <span class="docs-markdown-h3" id="examples">
-        <span header-link="examples"></span>Examples</span
-      >
-    </div>
+  <div class="doc-divider"></div>
+  <div class="doc-title-2">
+    Examples
+    <span class="docs-more-example"></span>
 
+    <span class="docs-markdown-h3" id="examples">
+      <span header-link="examples"></span>Examples</span>
+  </div>
+
+  <div class="doc-desc-2">
+    Each expansion-panel must include a header and may optionally include an
+    action bar.
+  </div>
+  <div class="doc-example-container">
+    <div app-docs-example="expansion-panel-table"></div>
+  </div>
+
+  <div class="exampleWrapper">
     <div class="doc-desc-2">
       Each expansion-panel must include a header and may optionally include an
       action bar.
     </div>
     <div class="doc-example-container">
-      <div app-docs-example="expansion-panel-table"></div>
+      <div app-docs-example="expansion-panel-angular"></div>
     </div>
+  </div>
 
-    <div class="exampleWrapper">
-      <div class="doc-desc-2">
-        Each expansion-panel must include a header and may optionally include an
-        action bar.
-      </div>
-      <div class="doc-example-container">
-        <div app-docs-example="expansion-panel-angular"></div>
-      </div>
-    </div>
+  <div class="doc-divider"></div>
+  <div class="doc-title-2">
+    Props
+    <span class="docs-markdown-h3" id="props">
+      <span header-link="props"></span>Props</span>
+  </div>
+  <div class="doc-desc-2">
+    To get a customized checkbox, just set
+    <span class="doc-desc-2-highlight">type/state/disabled</span>
+  </div>
+  <table class="doc-props-table">
+    <thead>
+      <tr>
+        <th>property</th>
+        <th>description</th>
+        <th>type</th>
+        <th>default</th>
+      </tr>
+    </thead>
+    <tbody>
+      <tr>
+        <td>vizShowExpand</td>
+        <td>Create toggle expand button control</td>
+        <td>boolean</td>
+        <td>true</td>
+      </tr>
+      <tr>
+        <td>vizExpand</td>
+        <td>Add expand animation to expanded target</td>
+        <td>boolean</td>
+        <td>true</td>
+      </tr>
+    </tbody>
+  </table>
+  <div class="doc-divider"></div>
+  <div class="doc-title-2">
+    Best Practices
+    <span class="docs-markdown-h3" id="best_practices">
+      <span header-link="best_practices"></span>Best Practices</span>
+  </div>
 
-    <div class="doc-divider"></div>
-    <div class="doc-title-2">
-      Props
-      <span class="docs-markdown-h3" id="props">
-        <span header-link="props"></span>Props</span
-      >
-    </div>
-    <div class="doc-desc-2">
-      To get a customized checkbox, just set
-      <span class="doc-desc-2-highlight">type/state/disabled</span>
-    </div>
-    <table class="doc-props-table">
-      <thead>
-        <tr>
-          <th>property</th>
-          <th>description</th>
-          <th>type</th>
-          <th>default</th>
-        </tr>
-      </thead>
-      <tbody>
-        <tr>
-          <td>vizShowExpand</td>
-          <td>Create toggle expand button control</td>
-          <td>boolean</td>
-          <td>true</td>
-        </tr>
-        <tr>
-          <td>vizExpand</td>
-          <td>Add expand animation to expanded target</td>
-          <td>boolean</td>
-          <td>true</td>
-        </tr>
-      </tbody>
-    </table>
-    <div class="doc-divider"></div>
-    <div class="doc-title-2">
-      Best Practices
-      <span class="docs-markdown-h3" id="best_practices">
-        <span header-link="best_practices"></span>Best Practices</span
-      >
-    </div>
+  <div class="doc-desc-2">
+    Expansion panels provides extra information in details-summary view of its
+    header, that&#x2019;s easy to scan, so that users can look for patterns
+    and insights.
+  </div>
 
-    <div class="doc-desc-2">
-      Expansion panels provides extra information in details-summary view of its
-      header, that&#x2019;s easy to scan, so that users can look for patterns
-      and insights.
-    </div>
+  <div class="doc-desc-2">
+    Expansion panels should:
+    <ul class="doc-list">
+      <li>
+        Focused: Expansion panels focus user attention to ensure their content
+        is addressed.
+      </li>
+      <li>
+        Direct: Expansion panels should be direct in communicating information
+        and dedicated to completing a task, allow lightweight editing of an
+        element.
+      </li>
+    </ul>
+  </div>
 
-    <div class="doc-desc-2">
-      Expansion panels should:
-      <ul class="doc-list">
-        <li>
-          Focused: Expansion panels focus user attention to ensure their content
-          is addressed.
-        </li>
-        <li>
-          Direct: Expansion panels should be direct in communicating information
-          and dedicated to completing a task, allow lightweight editing of an
-          element.
-        </li>
-      </ul>
-    </div>
+  <div class="doc-divider"></div>
 
-    <div class="doc-divider"></div>
-
-    <div class="doc-title-2">
-      Usage &amp; Content Guidelines
-      <span class="docs-markdown-h3" id="content_guidelines">
-        <span header-link="content_guidelines"></span>Content Guidelines</span
-      >
-    </div>
-    <div class="doc-desc-2">
-      As for expanded rows, use grey background color with top and bottom
-      shadows to distinguish from main rows.
-    </div>
-    <div class="docs-guideline-group">
-      <div class="docs-usage-do">
-        <div style="width: 100%; height: 352px" class="docs-usage-center">
-          <img
-            class="expansionpanel-usage"
-            src="assets/img/doc/expansionpanel-do.png"
-            alt=""
-          />
-        </div>
-      </div>
-      <div class="docs-usage-dont docs-mt16">
-        <div style="width: 100%; height: 352px" class="docs-usage-center">
-          <img
-            class="expansionpanel-usage"
-            src="assets/img/doc/expansionpanel-dont.png"
-            alt=""
-          />
-        </div>
+  <div class="doc-title-2">
+    Usage &amp; Content Guidelines
+    <span class="docs-markdown-h3" id="content_guidelines">
+      <span header-link="content_guidelines"></span>Content Guidelines</span>
+  </div>
+  <div class="doc-desc-2">
+    As for expanded rows, use grey background color with top and bottom
+    shadows to distinguish from main rows.
+  </div>
+  <div class="docs-guideline-group">
+    <div class="docs-usage-do">
+      <div style="width: 100%; height: 352px" class="docs-usage-center">
+        <img class="expansionpanel-usage" src="assets/img/doc/expansionpanel-do.png"
+          alt="">
       </div>
     </div>
-    <div class="doc-divider"></div>
-    <div class="doc-title-2">
-      Design Specs
-      <span class="docs-markdown-h3" id="design_specs">
-        <span header-link="design_specs"></span>Design Specs</span
-      >
+    <div class="docs-usage-dont docs-mt16">
+      <div style="width: 100%; height: 352px" class="docs-usage-center">
+        <img class="expansionpanel-usage" src="assets/img/doc/expansionpanel-dont.png"
+          alt="">
+      </div>
     </div>
+  </div>
+  <div class="doc-divider"></div>
+  <div class="doc-title-2">
+    Design Specs
+    <span class="docs-markdown-h3" id="design_specs">
+      <span header-link="design_specs"></span>Design Specs</span>
+  </div>
 
-    <div class="docs-usage-spec docs-usage-center" style="height:369px">
-      <img src="assets/img/doc/expansionpanel-spec.png" alt="" />
-    </div>
+  <div class="docs-usage-spec docs-usage-center" style="height:369px">
+    <img src="assets/img/doc/expansionpanel-spec.png" alt="">
+  </div>
 
-    <div class="doc-divider"></div>
-    <div class="doc-title-2">
-      Component Location for Designers
-      <span class="docs-markdown-h3" id="component_location_for_designers">
-        <span header-link="component_location_for_designers"></span>Component
-        Location for Designers</span
-      >
-    </div>
-    <a
-      class="doc-download-link"
-      href="http://vizient-toolkit.interactivelabs.com/toolkit_material_library.sketch"
-      >Download Sektch File</a
-    >
-    <div class="doc-desc-2">
-      For designers, to add this component to your design, follow this path
-      within the Sketch App UI:
-    </div>
-    <div sketch-link=""></div>
-  </body>
+  <div class="doc-divider"></div>
+  <div class="doc-title-2">
+    Component Location for Designers
+    <span class="docs-markdown-h3" id="component_location_for_designers">
+      <span header-link="component_location_for_designers"></span>Component
+      Location for Designers</span>
+  </div>
+  <a class="doc-download-link" href="http://vizient-toolkit.interactivelabs.com/toolkit_material_library.sketch">Download
+    Sektch File</a>
+  <div class="doc-desc-2">
+    For designers, to add this component to your design, follow this path
+    within the Sketch App UI:
+  </div>
+  <div sketch-link=""></div>
+
+
+</body>
+
 </html>
