--- a/src/assets/documents/components/feedbackindicator.html
+++ b/src/assets/documents/components/feedbackindicator.html
@@ -12,7 +12,8 @@
     Feedback Indicator
   </div>
   <div class="doc-desc-1">
-    Feedback indicator is used to inform user about important changes or persistent conditions. Feedback indicator shows at the
+    Feedback indicator is used to inform user about important changes or
+    persistent conditions. Feedback indicator shows at the
     top of the page or section they apply to.</div>
 
   <div class="doc-divider">
@@ -20,7 +21,7 @@
   </div>
   <div class="doc-title-2">
     Examples
-    <span class="docs-more-example" doc-viewer-extend="exampleWrapper"></span>
+    <span class="docs-more-example"></span>
     <span class="docs-markdown-h3" id="examples">
       <span header-link="examples"></span>Examples</span>
   </div>
@@ -30,18 +31,19 @@
     <div app-docs-example="feedback-indicator-basic"></div>
   </div>
 
-  <div id="exampleWrapper">
-    <div class="doc-desc-2">
-      Use to display information that needs attention or needs to be taken action.</div>
-    <div class="doc-example-container docs-mt16">
-      <div app-docs-example="feedback-indicator-warning"></div>
-    </div>
-    <div class="doc-desc-2">
-      Use to inform when actions are successfully completed. </div>
-    <div class="doc-example-container docs-mt16">
-      <div app-docs-example="feedback-indicator-success"></div>
-    </div>
+
+  <div class="doc-desc-2">
+    Use to display information that needs attention or needs to be taken
+    action.</div>
+  <div class="doc-example-container docs-mt16">
+    <div app-docs-example="feedback-indicator-warning"></div>
   </div>
+  <div class="doc-desc-2">
+    Use to inform when actions are successfully completed. </div>
+  <div class="doc-example-container docs-mt16">
+    <div app-docs-example="feedback-indicator-success"></div>
+  </div>
+
 
 
 
@@ -90,9 +92,12 @@
   <div class="doc-desc-2">
     Feedback indicator should:
     <ul class="doc-list">
-      <li>Focus on a single theme, piece of information, or required action to avoid overwhelming users.</li>
-      <li>Be concise and scannable &#x2013; users shouldn&#x2019;t need to spend a lot of time figuring out what they need to know and do.</li>
-      <li>Be limited to a few important calls to action with no more than one primary action.</li>
+      <li>Focus on a single theme, piece of information, or required action to
+        avoid overwhelming users.</li>
+      <li>Be concise and scannable &#x2013; users shouldn&#x2019;t need to
+        spend a lot of time figuring out what they need to know and do.</li>
+      <li>Be limited to a few important calls to action with no more than one
+        primary action.</li>
     </ul>
   </div>
 
@@ -108,14 +113,16 @@
   </div>
 
   <div class="doc-desc-2">
-    Body content should be concise, keep content to 1 to 2 sentences where possible, clarify the benefit of the main task
+    Body content should be concise, keep content to 1 to 2 sentences where
+    possible, clarify the benefit of the main task
   </div>
 
   <div class="docs-guideline-group">
     <div class="docs-usage-do docs-usage-w100 docs-usage-center" style="height:160px">
       <img src="assets/img/doc/feedbackindicator-do.png" alt="">
     </div>
-    <div class="docs-usage-dont docs-usage-w100 docs-usage-center docs-mt16" style="height:160px">
+    <div class="docs-usage-dont docs-usage-w100 docs-usage-center docs-mt16"
+      style="height:160px">
       <img src="assets/img/doc/feedbackindicator-dont.png" alt="">
     </div>
   </div>
@@ -136,12 +143,17 @@
   <div class="doc-title-2">
     Component Location for Designers
     <span class="docs-markdown-h3" id="component_location_for_designers">
-      <span header-link="component_location_for_designers"></span>Component Location for Designers</span>
-  </div><a class="doc-download-link" href="http://vizient-toolkit.interactivelabs.com/toolkit_material_library.sketch">Download Sektch File</a>
+      <span header-link="component_location_for_designers"></span>Component
+      Location for Designers</span>
+  </div><a class="doc-download-link" href="http://vizient-toolkit.interactivelabs.com/toolkit_material_library.sketch">Download
+    Sektch File</a>
   <div class="doc-desc-2">
-    For designers, to add this component to your design, follow this path within the Sketch App UI:
+    For designers, to add this component to your design, follow this path
+    within the Sketch App UI:
   </div>
   <div sketch-link=""></div>
+
+
 
 
 
