--- a/src/assets/documents/components/icon.html
+++ b/src/assets/documents/components/icon.html
@@ -12,39 +12,43 @@
     Icon
   </div>
   <div class="doc-desc-1">
-    The approved icon set is a typeface called Material Icon Font, which provides flexible, scalable vector icons that can be
-    plugged into any application without taxing the browser with a multitude of icon images.
+    The approved icon set is a typeface called Material Icon Font, which
+    provides flexible, scalable vector icons that can be
+    plugged into any application without taxing the browser with a multitude of
+    icon images.
   </div>
 
   <div class="doc-divider"></div>
   <div class="doc-title-2">
     Examples
-    <span class="docs-more-example" doc-viewer-extend="exampleWrapper"></span>
+    <span class="docs-more-example"></span>
     <span class="docs-markdown-h3" id="examples">
       <span header-link="examples"></span>Examples</span>
   </div>
 
   <div class="doc-desc-2">
-    For web projects, the best format is icon web font. Default font size is 24x24 px.
+    For web projects, the best format is icon web font. Default font size is
+    24x24 px.
   </div>
   <div class="doc-example-container">
     <div app-docs-example="icon-basic"></div>
   </div>
 
-  <div id="exampleWrapper">
-    <div class="doc-desc-2">
-      Smaller font size 18x18 px is often used for table, exansion panel, snackbar icons.
-    </div>
-    <div class="doc-example-container">
-      <div app-docs-example="icon-small"></div>
-    </div>
-    <div class="doc-desc-2">
-      Biggest font size is 32x32 px.
-    </div>
-    <div class="doc-example-container">
-      <div app-docs-example="icon-big"></div>
-    </div>
+
+  <div class="doc-desc-2">
+    Smaller font size 18x18 px is often used for table, exansion panel,
+    snackbar icons.
   </div>
+  <div class="doc-example-container">
+    <div app-docs-example="icon-small"></div>
+  </div>
+  <div class="doc-desc-2">
+    Biggest font size is 32x32 px.
+  </div>
+  <div class="doc-example-container">
+    <div app-docs-example="icon-big"></div>
+  </div>
+
 
   <div class="doc-divider">
   </div>
@@ -89,11 +93,14 @@
   </div>
 
   <div class="doc-desc-2">
-    System icons are designed to be simple, modern, friendly, and sometimes quirky. Each icon is reduced to its minimal form,
+    System icons are designed to be simple, modern, friendly, and sometimes
+    quirky. Each icon is reduced to its minimal form,
     expressing essential characteristics.
     <ul class="doc-list">
-      <li>They have a symmetrical and consistent look, ensuring readability and clarity, even at small sizes.</li>
-      <li>System icons are displayed as 24 x 24 dp. Create icons for viewing at 100% scale for pixel-perfect accuracy.</li>
+      <li>They have a symmetrical and consistent look, ensuring readability and
+        clarity, even at small sizes.</li>
+      <li>System icons are displayed as 24 x 24 dp. Create icons for viewing at
+        100% scale for pixel-perfect accuracy.</li>
 
     </ul>
   </div>
@@ -106,7 +113,8 @@
       <span header-link="content_guidelines"></span>Content Guidelines</span>
   </div>
   <div class="doc-desc-2">
-    Make icons graphic and bold. Don&#x2019;t use delicate, thin stroke weights.
+    Make icons graphic and bold. Don&#x2019;t use delicate, thin stroke
+    weights.
   </div>
   <div class="docs-guideline-group">
     <div class="docs-usage-do docs-usage-w50 docs-usage-center" style="height:160px">
@@ -117,7 +125,8 @@
     </div>
   </div>
   <div class="doc-desc-2">
-    Use geometric, consistent shapes. Don&#x2019;t use gestural or loose organic shapes.
+    Use geometric, consistent shapes. Don&#x2019;t use gestural or loose
+    organic shapes.
   </div>
   <div class="docs-guideline-group">
     <div class="docs-usage-do docs-usage-w50 docs-usage-center" style="height:160px">
@@ -128,7 +137,8 @@
     </div>
   </div>
   <div class="doc-desc-2">
-    Use consistent stroke weights and squared stroke terminals. Don&#x2019;t use inconsistent stroke weights or rounded stroke terminals.
+    Use consistent stroke weights and squared stroke terminals. Don&#x2019;t
+    use inconsistent stroke weights or rounded stroke terminals.
   </div>
   <div class="docs-guideline-group">
     <div class="docs-usage-do docs-usage-w50 docs-usage-center" style="height:160px">
@@ -153,12 +163,17 @@
   <div class="doc-title-2">
     Component Location for Designers
     <span class="docs-markdown-h3" id="component_location_for_designers">
-      <span header-link="component_location_for_designers"></span>Component Location for Designers</span>
-  </div><a class="doc-download-link" href="http://vizient-toolkit.interactivelabs.com/toolkit_material_library.sketch">Download Sektch File</a>
+      <span header-link="component_location_for_designers"></span>Component
+      Location for Designers</span>
+  </div><a class="doc-download-link" href="http://vizient-toolkit.interactivelabs.com/toolkit_material_library.sketch">Download
+    Sektch File</a>
   <div class="doc-desc-2">
-    For designers, to add this component to your design, follow this path within the Sketch App UI:
+    For designers, to add this component to your design, follow this path
+    within the Sketch App UI:
   </div>
   <div sketch-link=""></div>
+
+
 
 
 
