--- a/src/assets/documents/components/slider.html
+++ b/src/assets/documents/components/slider.html
@@ -18,55 +18,61 @@
   </div>
   <div class="doc-title-2">
     Examples
-    <span class="docs-more-example" doc-viewer-extend="exampleWrapper"></span>
+    <span class="docs-more-example"></span>
     <span class="docs-markdown-h3" id="examples">
       <span header-link="examples"></span>Examples</span>
   </div>
 
   <div class="doc-desc-2">
-    Discrete sliders display a numeric value label upon pressing the thumb, which allows a user to input an exact value.</div>
+    Discrete sliders display a numeric value label upon pressing the thumb,
+    which allows a user to input an exact value.</div>
   <div class="doc-example-container">
     <div app-docs-example="slider-basic"></div>
   </div>
 
 
-  <div id="exampleWrapper">
-    <!-- <div class="doc-desc-2">
+
+  <!-- <div class="doc-desc-2">
       Discrete sliders can get value by change event</div>
     <div class="doc-example-container">
       <div app-docs-example="slider-event"></div>
     </div> -->
-    <div class="doc-desc-2">
-      Discrete sliders can be locked up with icons on both ends of the bar that reflect a range of values.</div>
-    <div class="doc-example-container">
-      <div app-docs-example="slider-basic-icon"></div>
-    </div>
-    <div class="doc-desc-2">
-      Use continuous sliders allow users to make meaningful selections that don&#x2019;t require a specific value.</div>
-    <div class="doc-example-container">
-      <div app-docs-example="slider-continue"></div>
-    </div>
-    <div class="doc-desc-2">
-      Continuous sliders can be locked up with icons on both ends of the bar that reflect a range of values.</div>
-    <div class="doc-example-container">
-      <div app-docs-example="slider-continue-icon"></div>
-    </div>
-    <div class="doc-desc-2">
-      Use range slider to select two values between minimum and maximum values at once.</div>
-    <div class="doc-example-container">
-      <div app-docs-example="slider-range"></div>
-    </div>
-    <!-- <div class="doc-desc-2">
+  <div class="doc-desc-2">
+    Discrete sliders can be locked up with icons on both ends of the bar that
+    reflect a range of values.</div>
+  <div class="doc-example-container">
+    <div app-docs-example="slider-basic-icon"></div>
+  </div>
+  <div class="doc-desc-2">
+    Use continuous sliders allow users to make meaningful selections that
+    don&#x2019;t require a specific value.</div>
+  <div class="doc-example-container">
+    <div app-docs-example="slider-continue"></div>
+  </div>
+  <div class="doc-desc-2">
+    Continuous sliders can be locked up with icons on both ends of the bar that
+    reflect a range of values.</div>
+  <div class="doc-example-container">
+    <div app-docs-example="slider-continue-icon"></div>
+  </div>
+  <div class="doc-desc-2">
+    Use range slider to select two values between minimum and maximum values at
+    once.</div>
+  <div class="doc-example-container">
+    <div app-docs-example="slider-range"></div>
+  </div>
+  <!-- <div class="doc-desc-2">
       Range sliders can get range value from change event</div>
     <div class="doc-example-container">
       <div app-docs-example="slider-range-event"></div>
     </div> -->
-    <div class="doc-desc-2">
-      Range slider can be locked up with icons on both ends of the bar that reflect a range of values.</div>
-    <div class="doc-example-container">
-      <div app-docs-example="slider-range-icon"></div>
-    </div>
+  <div class="doc-desc-2">
+    Range slider can be locked up with icons on both ends of the bar that
+    reflect a range of values.</div>
+  <div class="doc-example-container">
+    <div app-docs-example="slider-range-icon"></div>
   </div>
+
 
 
   <div class="doc-divider">
@@ -115,7 +121,8 @@
     Use slider to:
     <ul class="doc-list">
       <li>Illustrate/communicate a sliding scale of an option.</li>
-      <li>Validate input as soon as the user has finished interacting with a field.</li>
+      <li>Validate input as soon as the user has finished interacting with a
+        field.</li>
     </ul>
   </div>
 
@@ -131,7 +138,8 @@
   </div>
 
   <div class="doc-desc-2">
-    Do not use sliders for ranges that are too large (1-1000) or too small (1-3) </div>
+    Do not use sliders for ranges that are too large (1-1000) or too small
+    (1-3) </div>
 
   <div class="docs-guideline-group">
     <div class="docs-usage-do docs-usage-w50 docs-usage-center" style="height:160px">
@@ -164,12 +172,17 @@
   <div class="doc-title-2">
     Component Location for Designers
     <span class="docs-markdown-h3" id="component_location_for_designers">
-      <span header-link="component_location_for_designers"></span>Component Location for Designers</span>
-  </div><a class="doc-download-link" href="http://vizient-toolkit.interactivelabs.com/toolkit_material_library.sketch">Download Sektch File</a>
+      <span header-link="component_location_for_designers"></span>Component
+      Location for Designers</span>
+  </div><a class="doc-download-link" href="http://vizient-toolkit.interactivelabs.com/toolkit_material_library.sketch">Download
+    Sektch File</a>
   <div class="doc-desc-2">
-    For designers, to add this component to your design, follow this path within the Sketch App UI:
+    For designers, to add this component to your design, follow this path
+    within the Sketch App UI:
   </div>
   <div sketch-link=""></div>
+
+
 
 
 
