--- a/src/assets/examples/login-basic/login-basic.component.scss
+++ b/src/assets/examples/login-basic/login-basic.component.scss
@@ -1,8 +1,10 @@
 :host {
   .login-wrapper {
-    display: block;
-    position: absolute;
-    left: 50%;
-    transform: translateX(-50%)
+    // display: block;
+    // position: absolute;
+    // left: 50%;
+    // transform: translateX(-50%)
+    width: 448px;
+    margin: 0 auto;
   }
 }
