--- a/src/assets/examples/paginator-basic/paginator-basic.component.scss
+++ b/src/assets/examples/paginator-basic/paginator-basic.component.scss
@@ -1,10 +1,17 @@
 .paginator-example {
-    height: 200px;
-    & > * {
-        position: absolute;
-        top: 50%;
-        left: 50%;
-        transform: translate(-50%, -50%);
-        width: 460px;
-    }    
+  // height: 200px;
+  // & > * {
+  //     position: absolute;
+  //     top: 50%;
+  //     left: 50%;
+  //     transform: translate(-50%, -50%);
+  //     width: 460px;
+  // }
+}
+::ng-deep {
+  .paginator-example {
+    .mat-paginator-container {
+      justify-content: center;
+    }
+  }
 }
